# emu-6502

./: .gitmodules  6502_functional_test.ca65  Cargo.toml
resources/: extract.py  ops.json
src/: instructions.rs  main.rs  regs.rs  utils.rs
src/instructions/: decode.rs
