[package]
name = "emu-6502"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.5.0"
bytemuck = { version = "1.15.0", features = ["min_const_generics"] }
# derive_more = { version = "0.99.17", features = ["from", "into", "try_into"], default-features = false }
fehler = "1.0.0"
macro_rules_attribute = "0.2.0"
num_enum = "0.7.2"
serde_json = "1.0.117"
